# guide

./: CMakeLists.txt  README.md  kerneltest.cl  main.cpp  mtk_adbshell.sh  mtk_test.sh  qcom_adbshell.sh
NeonGaussian/: CMakeLists.txt  README.txt  adbshell.sh  build.sh
NeonGaussian/build_android/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
NeonGaussian/build_android/src/: Makefile  cmake_install.cmake
NeonGaussian/cmake/: config.cmake
NeonGaussian/cmake/config/android/: android_arm32.cmake  android_arm64.cmake
NeonGaussian/jni/: Android.mk  Application.mk
NeonGaussian/src/: CMakeLists.txt
NeonGaussian/src/inc/: data_type.h  gaussian3x3.h
NeonGaussian/src/test/: example.c  gaussian3x3_neon.c
OpenCLGaussian/: CMakeLists.txt  README.md  gaussian.cl  main.cpp  mtk_adbshell.sh  mtk_test.sh  qcom_adbshell.sh  qcom_test.sh
OpenCLGaussian/opencl/mtk/opencl210/include/CL/: cl_gl.h
OpenCLTranspose/: README.md  Readme.md  main.cpp  qcom_test.sh
OpenCLTranspose/opencl/mtk/opencl210/include/CL/: cl_egl.h
opencl/mtk/opencl210/include/CL/: cl2.hpp  cl_gl_ext.h  cl_va_api_media_sharing_intel.h
